--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/chickenpaprikash.html">Chicken Paprikash Recipe</a></li>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     </ul>
     
