--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/chickenpaprikash.html">Chicken Paprikash Recipe</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/bibimbap.html">Bibimbap (Korean Rice) Recipe</a></li>
     </ul>
     
 </body>
